INT-2869, INT-3190: Fixed rubric flickering when joule grader is rendered

--- a/styles.css
+++ b/styles.css
@@ -47,3 +47,7 @@
     margin-left: 0px;
     margin-right: 0px;
 }
+
+#local-joulegrader .dontshow {
+    visibility: hidden;
+}
